<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="enabled"
        app:title="@string/pref_enabled_title"
        app:summary="@string/pref_enabled_summary"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="precision"
        app:title="@string/pref_precision_title"
        app:summary="%s"
        app:entries="@array/pref_precision_entries"
        app:entryValues="@array/pref_precision_values"
        app:defaultValue="-1"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="percent_mode"
        app:title="@string/pref_percent_mode_title"
        app:summary="%s"
        app:entries="@array/pref_percent_mode_entries"
        app:entryValues="@array/pref_percent_mode_values"
        app:defaultValue="ADDITIVE"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="replace_expression"
        app:title="@string/pref_replace_title"
        app:summary="@string/pref_replace_summary"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="haptics"
        app:title="@string/pref_haptics_title"
        app:summary="@string/pref_haptics_summary"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="sound"
        app:title="@string/pref_sound_title"
        app:summary="@string/pref_sound_summary"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="number_row_enabled"
        app:title="@string/pref_number_row_title"
        app:summary="@string/pref_number_row_summary"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="autocorrect_enabled"
        app:title="@string/pref_autocorrect_title"
        app:summary="@string/pref_autocorrect_summary"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="spell_check_enabled"
        app:title="@string/pref_spell_check_title"
        app:summary="@string/pref_spell_check_summary"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="auto_space_enabled"
        app:title="@string/pref_auto_space_title"
        app:summary="@string/pref_auto_space_summary"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="auto_cap_enabled"
        app:title="@string/pref_auto_cap_title"
        app:summary="@string/pref_auto_cap_summary"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="double_space_period_enabled"
        app:title="@string/pref_double_space_period_title"
        app:summary="@string/pref_double_space_period_summary"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="alt_char_hints_enabled"
        app:title="@string/pref_alt_char_hints_title"
        app:summary="@string/pref_alt_char_hints_summary"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="backspace_speed"
        app:title="@string/pref_backspace_speed_title"
        app:summary="%s"
        app:entries="@array/pref_backspace_speed_entries"
        app:entryValues="@array/pref_backspace_speed_values"
        app:defaultValue="NORMAL"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="long_press_delay"
        app:title="@string/pref_long_press_delay_title"
        app:summary="%s"
        app:entries="@array/pref_long_press_delay_entries"
        app:entryValues="@array/pref_long_press_delay_values"
        app:defaultValue="MEDIUM"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="key_font_scale"
        app:title="@string/pref_key_font_scale_title"
        app:summary="%s"
        app:entries="@array/pref_key_font_scale_entries"
        app:entryValues="@array/pref_key_font_scale_values"
        app:defaultValue="1.0"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="theme_preset"
        app:title="@string/pref_theme_title"
        app:summary="%s"
        app:entries="@array/pref_theme_entries"
        app:entryValues="@array/pref_theme_values"
        app:defaultValue="wallpaper"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="insert_exact_value"
        app:title="@string/pref_insert_exact_title"
        app:summary="@string/pref_insert_exact_summary"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        app:key="locale_override"
        app:title="@string/pref_locale_title"
        app:summary="@string/pref_locale_summary"
        app:defaultValue=""
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="form_factor"
        app:title="@string/pref_form_factor_title"
        app:summary="%s"
        app:entries="@array/pref_form_factor_entries"
        app:entryValues="@array/pref_form_factor_values"
        app:defaultValue="NORMAL"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="one_handed_right"
        app:title="@string/pref_one_handed_right_title"
        app:summary="@string/pref_one_handed_right_summary"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="voice_input_enabled"
        app:title="@string/pref_voice_input_title"
        app:summary="@string/pref_voice_input_summary"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="overlay"
        app:title="@string/pref_overlay_title"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
